# DevOps-Course-Starter

./: .dockerignore  .env.template  .gitignore  .travis.yml  Dockerfile  README.md  Task.py  TrelloApi.py  Vagrantfile  app.py  deploy.sh  docker-compose.yaml  main.tf  prod.sh  pyproject.toml  requirements.txt  session_items.py  setup.sh  trello_api.py
docs/: component-diagram.drawio  container-diagram.drawio  context-diagram.drawio
scripts/: deploy.sh
src/: .env.template  Task.py  TrelloApi.py  app.py
src/templates/: index.html  layout.html
src/tests/: .env.test  AnonUser.py  DbCommunicator_test.py  Task_test.py  TrelloApi_test.py  ViewModel_test.py  fixtures.py  integration_test.py
src/tests_e2e/: e2e_test.py
src/todolist/: .env.test  DbCommunicator.py  Task.py  TrelloApi.py  User.py  ViewModel.py  app.py
src/todolist/static/: styling.css
src/todolist/templates/: index.html
static/: styling.css
templates/: index.html
tests/: TrelloApi_test.py
