[tool.poetry]
name = "todolist"
version = "0"
description = "devops project"
authors = ["JoL"]

[tool.poetry.dependencies]
python = "3.8.3"
Flask = "1.1.1"
python-dotenv = "0.12.0"
requests = "2.24.0"
gunicorn = "20.0.4"
pymongo = {extras = ["srv"], version = "^3.11.3"}

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
selenium = "3.141.0"
mongomock = "^3.22.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
